[tool.poetry]
name = "pipen-diagram"
version = "0.4.0"
description = "Draw pipeline diagrams for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-diagram"
repository = "https://github.com/pwwang/pipen-diagram"

[tool.poetry.dependencies]
python = "^3.7.1"
pipen = "^0.7"
graphviz = "^0.20"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
diagram = "pipen_diagram:PipenDiagram"

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning -p no:asyncio --cov-config=.coveragerc --cov=pipen_diagram --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
