[tool.poetry]
name = "pipen-diagram"
version = "0.11.0"
description = "Draw pipeline diagrams for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-diagram"
repository = "https://github.com/pwwang/pipen-diagram"

[tool.poetry.dependencies]
python = "^3.9"
pipen = "^0.14"
graphviz = "^0.20"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
pytest-xdist = "^2"
pytest-forked = "^1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
diagram = "pipen_diagram:PipenDiagram"

[tool.pytest.ini_options]
addopts = "-vv -n auto -W error::UserWarning -p no:asyncio --cov-config=.coveragerc --cov=pipen_diagram --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
