[tool.poetry]
name = "pipen-diagram"
version = "1.1.0"
description = "Draw pipeline diagrams for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-diagram"
repository = "https://github.com/pwwang/pipen-diagram"

[tool.poetry.dependencies]
python = "^3.9"
pipen = {version = "1.1.*", allow-prereleases = true}
graphviz = "^0.21"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-xdist = "^3"
pytest-forked = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pipen]
diagram = "pipen_diagram:PipenDiagram"

[tool.pytest.ini_options]
addopts = "-vv -n auto -W error::UserWarning -p no:asyncio --cov-config=.coveragerc --cov=pipen_diagram --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "ignore:.+may lead to deadlocks in the child:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["tests/"]

# Same as Black.
line-length = 88
indent-width = 4
